# portfolio_v3

./: Cargo.toml  README.md  base.html  makefile
.github/workflows/: default.yml
config/: base.json  dev.json  prod.json
scripts/: init_db.sh
src/: app.rs  config.rs  error.rs  main.rs  telemetry.rs
src/routes/: home.rs
src/routes/home/: home.html
templates/: base.html  home.html
tests/api/: health_check.rs  helper.rs
