[package]
name = "portfolio_v3"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
config = { version = "0.14.0", default-features = false, features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde-aux = { version = "4.5.0", default-features = false }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
